# tw-quant-selector

./: .README.md.swp  .dockerignore  .gitignore  .stock_monitor.json  BACKTEST_GUIDE.md  CODE_REVIEW_REPORT.md  Dockerfile  LIVE_MONITORING.md  README.md  STRATEGY_GUIDE.md  docker-compose.yml  pyproject.toml  repro_issue.py  requirements.txt  run.sh  run_v1.sh  taiwan_stock_selector_spec.md
.venv_docker/: pyvenv.cfg
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: BaseTable.module.css  BaseTable.tsx  DensityToggle.module.css  DensityToggle.tsx  Dropdown.module.css  Dropdown.tsx  EmptyState.tsx  (+28 more)
myenv/: pyvenv.cfg
scripts/: check_ingestion_status.py  check_live_alerts.py  export_portfolio.py  migrate_portfolio.py  run_daily_pipeline.py  run_demo.py  run_scheduler.py  scheduler_cron.sh  sync_portfolio_csv.py
tasks/: t1-project-init.md  t10-score-combiner.md  t11-transaction-cost.md  t12-portfolio-rebalance.md  t13-backtest-engine.md  t14-performance-metrics.md  t15-rest-api.md  t16-monitoring-alerting.md  t17-docker.md  t18-testing.md  t2-db-schema.md  t3-data-finmind.md  t4-data-twse-tpex.md  t5-dividend-adjustment.md  t6-universe-module.md  t7-strategy-base.md  t8-strategy-momentum-value.md  t9-strategy-quality-growth.md
tests/: check_db_schema.py  diagnose_strategy.py  regenerate_signals.py  test_adjustment.py  test_api.py  test_combiner.py  test_costs.py  test_db.py  test_fix_validation.py  test_metrics.py  test_strategies.py  test_twse.py  test_universe.py
(+55 files in other folders)
