[project]
name = "tw-quant-selector"
version = "1.0.0"
description = "台股 + ETF 自動選股系統 - 個人量化研究與回測"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "duckdb>=0.10.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "structlog>=24.1.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=69.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
